# 12urenloop

./: .gitignore  12u Loop v1.xd  Jenkinsfile  README.md  app.js  data.db  db_as.js  package-lock.json  package.json  server.js
backend/: .env  CMakeLists.txt  app.js  main.cpp  package-lock.json  package.json  suppressions.txt  token.cpp  token.h  user.cpp  user.h  util.cpp  util.h
backend/routes/: users.js
db/: README.md  dbdiagram.txt  sql.txt
doc/api/: package.json
doc/api/public/: index.html
doc/api/reference/: wealth.json
doc/api/src/: App.js
frontend/src/: App.css  App.js
routes/: run.js  runs.js  user.js
static/css/: main.css
views/: addrun.ejs  index.ejs  loper.ejs  newuser.ejs  wachtrij.ejs
views/partials/: footer.ejs  logo.ejs
